2015-06-03  Per Bothner  <per@bothner.com>

	* num-test.scm: Add test.
	* inlining-test.scm (increment-s8a, increment-arr-s8)
	incrementU8a setU16a addU8aU16a): New functions.
	* Makefile.am: Update accordingly.
	* inlining.expected: Update accordingly.

2015-06-02  Per Bothner  <per@bothner.com>

	* num-test.scm: Add some tests for primitive unsigned comparison.
	* inlining-test.scm: Likewise.
	* Makefile.am: Update accordingly.
	* inlining.expected: Update accordingly.

2015-05-20  Per Bothner  <per@bothner.com>

	* obj-test.scm: Fix deprecated return-type specifier syntax.
	* mac-test.scm: Likewise.

2015-05-20  William D Clinger <will@ccs.neu.edu>

	* larceny-tests/tests/scheme/lazy.sld: Another Larceny test.
	* larceny-tests/run/lazy.sps: New test driver.
	* Makefile.am (LARCENY_SIMPLE_TESTS1): Add lazy.

2015-05-20  William D Clinger <will@ccs.neu.edu>

	* larceny-tests/run/time.sps: Updated version from Larceny.
	* larceny-tests/tests/scheme/char.body-alt.scm: New, from Larceny.
	* larceny-tests/tests/scheme/char.sld: Updated runner from Larceny.

2015-05-17  Per Bothner  <per@bothner.com>

	* larceny-tests/run/time.sps: Don't write megaflops-per-second
	output since it breaks diff-ing the output.

	* larceny-tests/tests/scheme/read.sld: Another Larceny test.
	* larceny-tests/run/read.sps: New test driver.
	* Makefile.am (LARCENY_SIMPLE_TESTS1): Add read.

	* larceny-tests/tests/scheme/complex.sld: Another Larceny test.
	* larceny-tests/tests/scheme/complex.body.scm: Part of new test,
	* larceny-tests/run/complex.sps: New test driver.
	* Makefile.am (LARCENY_SIMPLE_TESTS1): Add complex.

2015-05-16  Per Bothner  <per@bothner.com>

	* misc-test.scm: Quote keywords as needed.  Remove now-redundant test.
	* bad-keywords1.scm: Add test for single final keyword.
	Update warning message text.

2015-05-15  Per Bothner  <per@bothner.com>

	* inlining.expected: Update for removed redundant gotos.

2015-05-14  Per Bothner  <per@bothner.com>

	* inline4.scm: New test.